# snakeboxed

./: .gitignore  LICENSE-THIRD-PARTY  Pipfile  README.md  bot.py  config.template.toml  requirements.txt  setup.cfg  setup.py
assets/: credit.txt
assets/systemd/: discord-bot@.service  snekbox.service
snakeboxed/: __init__.py  __main__.py  bot.py
snakeboxed/cogs/: __init__.py  owner.py  python_info.py  snakeboxed_info.py  snekbox.py  steganographr.py
snakeboxed/cogs/docs/: __init__.py  _batch_parser.py  _cog.py  _html.py  _inventory_parser.py  _markdown.py  _parsing.py
