[build-system]
requires = [
    "discord.py[voice]>=1.7,<2",
    "toml>=0.10,<0.11"
]

[metadata]
name = snakeboxed
version = 1.7.0
author = JMcB
description = The public bot for learning Python together on Discord.
long_description = file: README.md
long_description_content_type = text/markdown
url = https://github.com/JMcB17/snakeboxed
project_urls =
    Bug Tracker = https://github.com/JMcB17/snakeboxed/issues
classifiers =
    Programming Language :: Python :: 3
    Natural Language :: English
    License :: OSI Approved :: GNU General Public License v3 (GPLv3)
    Operating System :: OS Independent
    Environment :: Console
    Topic :: Education

[options]
packages = find:
python_requires = >=3.10
