[build-system]
requires = [
    "discord.py[voice]>=1.7,<2",
    "toml>=0.10,<0.11"
]

[metadata]
name = snakeboxed
version = attr: snakeboxed.__version__
author = JMcB
description = The public bot for learning Python together on Discord.
long_description = file: README.md
long_description_content_type = text/markdown
url = https://github.com/JMcB17/snakeboxed
license = AGPLv3
license_file = LICENSE
project_urls =
    Bug Tracker = https://github.com/JMcB17/snakeboxed/issues
classifiers =
    Programming Language :: Python :: 3
    Natural Language :: English
    License :: OSI Approved :: GNU Affero General Public License v3 or later (AGPLv3+)
    Operating System :: OS Independent
    Environment :: Console
    Topic :: Education
    Development Status :: 4 - Beta
    Framework :: AsyncIO

[options]
packages = find:
python_requires = >=3.10
# todo: add config.template.toml to this
# package_data =

[options.entry_points]
console_scripts =
    snakeboxed = snakeboxed:main
